--- a/style.css
+++ b/style.css
@@ -45,11 +45,12 @@ body {
 
 .snake-row {
   text-align: center;
+  max-width: 100%;
 }
 
 .flexy {
    display: flex;
-  justify-content: space-around;
+   justify-content: space-around;
 }
 
 .start-row {
