--- a/style.css
+++ b/style.css
@@ -45,13 +45,17 @@ body {
 
 .snake-row {
   text-align: center;
-  max-width: 100%;
 }
 
 .flexy {
    display: flex;
    justify-content: space-around;
-    max-width: 90%;
+}
+
+img {
+    margin: auto;
+    width: 100%;
+    max-height:100%
 }
 
 .start-row {
